--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -37,6 +37,6 @@ knife4j:
       group: "文档说明"  # 文档分组
       locations: classpath:markdown/guide/*  # 文档存放路径
   basic:
-    enable: true  # 是否启用基础认证
+    enable: false  # 是否启用基础认证
     username: admin  # 认证用户名
     password: 123456  # 认证密码
