对话历史模块 1. 利用 LangChain4j + Redis 实现对话记忆持久化 2. 通过工厂为 appId 创建隔离的 AI Service，并用 Caffeine 本地缓存优化 3. 从数据库中加载对话历史，实现真正地持久化 4. 增加 Redis Session，实现用户登录态持久化

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,17 +2,28 @@ server:
   port: 8123
   servlet:
     context-path: /api
+    session:
+      cookie:
+        max-age: 2592000
 spring:
   application:
     name: cao-ai-code-mother-backend
   profiles:
     active: local
+  session:
+    store-type: redis
+    timeout: 2592000 # 30天过期
   # mysql
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/yu_ai_code_mother
     username: root
     password: cao66!
+  data:
+    redis:
+      host: localhost
+      port: 6379
+      ttl: 3600  # redis缓存时间，单位秒，默认1小时
 
 # knife4j
 knife4j:
