--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -51,3 +51,9 @@ knife4j:
     enable: false  # 是否启用基础认证
     username: admin  # 认证用户名
     password: 123456  # 认证密码
+
+# 飞书配置
+lark:
+  clientId: cli_a84cc126327ad00b
+  clientSecret: YwN3sTu3ogC0PGaQgCw2igKg7NFxVcuC
+  redirectUri: http://localhost:8123/api/user/larkCallback
