飞书网页应用免登录[优化代码逻辑] 1. 移除 AuthProviderFactory 中的内部枚举 AuthType，使用公共枚举 AuthTypeEnum 2. 调整 LarkApiClientImpl 中用户信息同步逻辑，统一使用 saveOrUpdate 方法 3. 更新 application.yml 配置，调整飞书回调地址和新增前端基础 URL 4. 优化 LarkAuthProvider 登录流程，加强参数校验并简化代码结构```

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -56,4 +56,8 @@ knife4j:
 lark:
   clientId: cli_a84cc126327ad00b
   clientSecret: YwN3sTu3ogC0PGaQgCw2igKg7NFxVcuC
-  redirectUri: http://localhost:8123/api/user/larkCallback
+  redirectUri: http://localhost:8123/api/lark/callback
+
+# URL 配置
+frontend:
+  base-url: http://localhost:5173
